feat: Add support for `getURL` in database metadata.